跑通自定义实体与刷怪蛋的逻辑与美术逻辑，刷怪蛋的贴图依然显示不正确，之后看看

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -1,3 +1,5 @@
 ﻿{
-  "item.shape-shifter-curse.cursed_book_of_shape_shifter": "Strange book"
+  "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["Strange book"],
+  "screen.shape-shifter-curse.start_book.start_button_text": ["TestButton"],
+  "item.spawn_egg.custom_bat_spawn_egg": ["Bat? Spawn Egg"]
 }
