变化时的视觉与粒子效果实现完毕，实现用于测试的命令，之后要做的是变化时的动作

--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -20,5 +20,6 @@
       "text": "take a nap", "color": "yellow"
     },
     "?"
-  ]
+  ],
+  "commands.shape_shifter_curse.form_not_found": ["Form not found!"]
 }
