--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -20,5 +20,6 @@
       "text": "睡一觉", "color": "yellow"
     },
     "?"
-  ]
+  ],
+  "commands.shape_shifter_curse.form_not_found": ["未找到指定的形态！"]
 }
