--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -21,5 +21,88 @@
     },
     "?"
   ],
-  "commands.shape_shifter_curse.form_not_found": ["Form not found!"]
+  "commands.shape_shifter_curse.form_not_found": ["Form not found!"],
+  "codex.header.status": ["Status"],
+  "codex.header.appearance": ["Appearance"],
+  "codex.header.pros": ["Pros"],
+  "codex.header.cons": ["Cons"],
+  "codex.header.instincts": ["Instincts"],
+  "codex.status.normal": ["Currently, you feel nothing special"],
+  "codex.status.infected": ["For some reason, you suddenly feel a strange",
+    {
+      "text": "drowsiness", "color": "#0096FF"
+    },
+    ", and you feel that the magic in your body is changing\nMaybe you should",
+    {
+      "text": "take a nap", "color": "yellow"
+    },
+    "?"],
+  "codex.status.before_moon": ["You feel that the magic in your body is surging, and the next night, the cursed moon will rise..."],
+  "codex.status.under_moon": ["The influence of the cursed moon has changed your body...\nAs the night ends, this influence will also fade. But... maybe you should take advantage of this opportunity?"],
+  "codex.desc.appearance_normal": ["Your body feels no different from usual. Perhaps the chant you recited needs some kind of trigger to take effect?"],
+  "codex.desc.pros_normal": ["Currently, the magic in your body has not brought you any perceivable benefits"],
+  "codex.desc.cons_normal": ["Currently, the magic in your body has not brought you any disadvantages"],
+  "codex.desc.instincts_normal": ["Examine your heart, you do perceive some kind of magic in your body, but that's all.\nYour heart is calm, maintaining a perception of the surrounding environment"],
+  "codex.desc.appearance_0": ["Due to the resonance of the magic in your body with other creatures, your body has undergone some changes. At this stage, a golden apple is enough to completely reverse it..."],
+  "codex.desc.pros_0": ["Your new form gives you some additional abilities..."],
+  "codex.desc.cons_0": ["At the same time, your new form also brings some inconveniences..."],
+  "codex.desc.instincts_0": ["Instincts from other creatures invade your heart\nIf you insist on resisting them, the unstable magic in your body may further change your body..."],
+  "codex.desc.appearance_1": ["The intensified magic has further changed your body. You perceive that it is trying to reach a new equilibrium, a state that is completely different from your original self.\nPerhaps it is a good idea to reverse it with a golden apple before it enters the next stage..."],
+  "codex.desc.pros_1": ["Your new form gives you more additional abilities..."],
+  "codex.desc.cons_1": ["At the same time, your new form also brings some new inconveniences..."],
+  "codex.desc.instincts_1": ["The influence of the instincts of other creatures in your heart is becoming more and more obvious\nIf you insist on resisting them, the unstable magic in your body may further change your body..."],
+  "codex.desc.appearance_2": ["The magic in your body has almost completely changed you. It has reached a new stable state, and even a golden apple is of no avail..."],
+  "codex.desc.pros_2": ["Your form has these powers"],
+  "codex.desc.cons_2": ["At the same time, your form also has some inconvenient places..."],
+  "codex.desc.instincts_2": ["Your instincts no longer bother you, they have become a part of you"],
+  "codex.form.original.title": ["Overall, in the eyes of others, you are a completely normal human"],
+  "codex.form.original.appearance": [" "],
+  "codex.form.original.pros": [" "],
+  "codex.form.original.cons": [" "],
+  "codex.form.original.instincts": [" "],
+  "codex.form.bat0.title": ["Overall, if you manage to hide the anomalies on your body, others will think you are a bit of a strange human"],
+  "codex.form.bat0.appearance": ["Your arms extend membranous appendages on the outside, feeling a bit like a bat\nYour coccyx also protrudes outward to form a small tail\nBut other than that, they seem to have little practical function"],
+  "codex.form.bat0.pros": ["When in the dark, you feel more agile in your actions"],
+  "codex.form.bat0.cons": ["你无法装备胸甲了：你的新肢体让它们变得不再合身"],
+  "codex.form.bat0.instincts": ["Stay in the dark makes you feel",
+    {
+      "text":"comfortable", "color":"green"
+    },"\n\nThe idea of eating fruit makes you feel",
+    {
+      "text":"comfortable", "color":"green"
+    },"\n\nThe idea of being surrounded by dripping stones or stalactites makes you feel",
+    {
+      "text":"comfortable", "color":"green"
+    },"\n\nThe idea of staying in the sun makes you feel",
+    {
+      "text":"uncomfortable", "color":"red"
+    }],
+  "codex.form.bat1.title": ["整体而言，你身上的那些异常之处已经过于明显，无法被隐藏起来，其他人会认为你可能是某些外来种族"],
+  "codex.form.bat1.appearance": ["你的耳朵现在位于头顶，它们变得又大又尖，朝向前方\n你的手臂外侧延伸出的膜翼进一步生长，在跳起时你发现你会不自觉地扇动它们\n你的手指现在的结构有点像爪子，让你无法进行精细的操作，不过你依然能够正常抓取物品\n你的脚趾向外延伸，变得又细又长\n你的尾部进一步变长了\n你似乎变小了一些\n由于身体重心的改变，你发现在下蹲时你会不自觉蹲坐在地面上"],
+  "codex.form.bat1.pros": ["你现在可以在黑暗中清晰地分辨事物\n你的双臂变得更加有力，让你的近战攻击力得到了提升\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高\n当处于暗处时，你感觉自己的行动更加敏捷"],
+  "codex.form.bat1.cons": ["你现在的手指结构让使用弓弩变成了奢望\n你的膜翼与新的脚趾结构让装备胸甲与鞋变得不再可能\n在阳光下时，你感觉自己变得更加虚弱与迟缓\n你的身体似乎不再适合消化肉食，它们给与的饱食度更少"],
+  "codex.form.bat1.instincts": ["待在暗处的想法让你感觉",
+    {
+      "text":"舒适", "color":"green"
+    },"\n吃一些水果的想法让你感觉",
+    {
+      "text":"舒适", "color":"green"
+    },"\n被滴水石块或石笋围绕的想法让你感觉",
+    {
+      "text":"舒适", "color":"green"
+    },"\n\n待在阳光下的想法让你感觉",
+    {
+      "text":"不舒服", "color":"red"
+    },"\n吃肉食的想法让你感觉",
+    {
+      "text":"不舒服", "color":"red"
+    },"\n睡觉而浪费美好的夜晚的想法让你感觉",
+    {
+      "text":"不舒服", "color":"red"
+    }],
+  "codex.form.bat2.title": ["整体而言，其他人会认为你完全是一只大的奇怪的蝙蝠"],
+  "codex.form.bat2.appearance": ["你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用工具和武器。不过有了这样一对坚硬而锐利的爪子，谁还想要笨重的工具和武器呢？\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n蹲坐在地面上是对你而言最自然的姿态\n在阴冷的洞窟中，你身体上覆盖的毛发可以有效维持温暖"],
+  "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。自然，它们也可以当做鞘翅使用\n你的体型已经足够小，让你可以挤入一格的空间中。不过和你的其他同类相比还是显得太大了"],
+  "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
+  "codex.form.bat2.instincts": [" "]
 }
