--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -21,5 +21,82 @@
     },
     "?"
   ],
-  "commands.shape_shifter_curse.form_not_found": ["未找到指定的形态！"]
+  "commands.shape_shifter_curse.form_not_found": ["未找到指定的形态！"],
+  "codex.header.status": ["状态"],
+  "codex.header.appearance": ["外观"],
+  "codex.header.pros": ["能力"],
+  "codex.header.cons": ["劣势"],
+  "codex.header.instincts": ["本能"],
+  "codex.status.normal": ["当前，你感觉没什么特别的"],
+  "codex.status.infected": ["不知为何，你心中突然涌起莫名的",
+    {
+      "text": "困意", "color": "#0096FF"
+    },
+    "，同时你觉察到你体内的魔法正在产生变化\n也许你应该去",
+    {
+      "text": "睡一觉", "color": "yellow"
+    },
+    "?"],
+  "codex.status.before_moon": ["你感觉到体内的魔法正在涌动，下一个夜晚，诅咒之月将会升起..."],
+  "codex.status.under_moon": ["诅咒之月的影响改变了你的身体...\n随着夜晚的结束，这一影响也会消退。不过...也许你应该善用这次机会?"],
+  "codex.desc.appearance_normal": ["你的身体感觉和往常没有太大区别。也许你所吟诵的那句魔咒需要一些契机才会产生效果？"],
+  "codex.desc.pros_normal": ["目前，你体内的魔法没有给你带来任何能觉察到的益处"],
+  "codex.desc.cons_normal": ["目前，你体内的魔法没有给你带来任何不利的影响"],
+  "codex.desc.instincts_normal": ["审视你的内心，你确实觉察到了身体中存在的某种魔法，不过也仅此而已。\n你的内心平静，保持着对周围环境的感知"],
+  "codex.desc.appearance_0": ["由于你体内的魔法与其他生物的共鸣，你的身体出现了一些变化。在这一阶段，一个金苹果便足以完全将其逆转…"],
+  "codex.desc.pros_0": ["你的新形态给了你一些额外的能力…"],
+  "codex.desc.cons_0": ["同时，你的新形态也带来了一些不便之处…"],
+  "codex.desc.instincts_0": ["源自其他生物的本能侵入了你的内心\n如果你执意违抗它们的话，你体内不稳定的魔法很可能会进一步改变你的身体..."],
+  "codex.desc.appearance_1": ["被激化的魔法进一步改变了你的身体。你觉察到它正在试图达到某种新的稳态，某种..和原来的你完全不同的状态。\n也许在其进入到下一个阶段之前使用金苹果逆转它是个好主意..."],
+  "codex.desc.pros_1": ["你的新形态给了你更多额外的能力…"],
+  "codex.desc.cons_1": ["同时，你的新形态也带来了一些新的不便之处…"],
+  "codex.desc.instincts_1": ["你心中其他生物本能的影响愈发明显\n如果你执意违抗它们的话，你体内不稳定的魔法很可能会进一步改变你的身体..."],
+  "codex.desc.appearance_2": ["你体内的魔法几乎彻底改变了你。它进入了新的稳定状态，即使是金苹果也无济于补了…\n除非有某些“更加强大”的影响可以让它再次流动…"],
+  "codex.desc.pros_2": ["你的形态拥有这些力量"],
+  "codex.desc.cons_2": ["同时，你的形态也有一些不便的地方…"],
+  "codex.desc.instincts_2": ["你的本能不再困扰你，它们已经完全成为了你的一部分"],
+  "codex.form.original.title": ["整体而言，在其他人眼中，你是一个完全正常的人类"],
+  "codex.form.original.appearance": [" "],
+  "codex.form.original.pros": [" "],
+  "codex.form.original.cons": [" "],
+  "codex.form.original.instincts": [" "],
+  "codex.form.bat0.title": ["整体而言，如果设法隐藏掉你身上的那些异常之处的话，其他人会认为你是一个有点奇怪的人类"],
+  "codex.form.bat0.appearance": ["你的手臂外侧延伸出了附有皮膜的附肢，感觉有点像蝙蝠\n你的尾骨也向外突出形成一条小小的尾部\n不过除此以外，它们似乎没有太多实际功能"],
+  "codex.form.bat0.pros": ["当处于暗处时，你感觉自己的行动更加敏捷"],
+  "codex.form.bat0.cons": ["你无法装备胸甲了：你的新附肢让它们变得不再合身"],
+  "codex.form.bat0.instincts": ["待在暗处的想法让你感觉",
+    {
+    "text":"舒适", "color":"green"
+    },"\n\n待在阳光下的想法让你感觉",
+    {
+    "text":"不舒服", "color":"red"
+    }],
+  "codex.form.bat1.title": ["整体而言，你身上的那些异常之处已经过于明显，无法被隐藏起来，其他人会认为你可能是某些外来种族"],
+  "codex.form.bat1.appearance": ["你的耳朵现在位于头顶，它们变得又大又尖，朝向前方\n你的手臂外侧延伸出的膜翼进一步生长，在跳起时你发现你会不自觉地扇动它们\n你的手指现在的结构有点像爪子，让你无法进行精细的操作，不过你依然能够正常抓取物品\n你的脚趾向外延伸，变得又细又长\n你的尾部进一步变长了\n你似乎变小了一些\n由于身体重心的改变，你发现在下蹲时你会不自觉蹲坐在地面上"],
+  "codex.form.bat1.pros": ["你现在可以在黑暗中清晰地分辨事物\n你的双臂变得更加有力，让你的近战攻击力得到了提升\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高\n当处于暗处时，你感觉自己的行动更加敏捷"],
+  "codex.form.bat1.cons": ["你现在的手指结构让使用弓弩变成了奢望\n你的膜翼与新的脚趾结构让装备胸甲与鞋变得不再可能\n在阳光下时，你感觉自己变得更加虚弱与迟缓\n你的身体似乎不再适合消化肉食，它们给与的饱食度更少"],
+  "codex.form.bat1.instincts": ["待在暗处的想法让你感觉",
+    {
+      "text":"舒适", "color":"green"
+    },"\n吃一些水果的想法让你感觉",
+    {
+      "text":"舒适", "color":"green"
+    },"\n被滴水石块或石笋围绕的想法让你感觉",
+    {
+      "text":"舒适", "color":"green"
+    },"\n\n待在阳光下的想法让你感觉",
+    {
+      "text":"不舒服", "color":"red"
+    },"\n吃肉食的想法让你感觉",
+    {
+      "text":"不舒服", "color":"red"
+    },"\n睡觉而浪费美好的夜晚的想法让你感觉",
+    {
+      "text":"不舒服", "color":"red"
+    }],
+  "codex.form.bat2.title": ["整体而言，其他人会认为你完全是一只大的奇怪的蝙蝠"],
+  "codex.form.bat2.appearance": ["你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用工具和武器。不过有了这样一对坚硬而锐利的爪子，谁还想要笨重的工具和武器呢？\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n蹲坐在地面上是对你而言最自然的姿态\n在阴冷的洞窟中，你身体上覆盖的毛发可以有效维持温暖"],
+  "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。自然，它们也可以当做鞘翅使用\n你的体型已经足够小，让你可以挤入一格的空间中。不过和你的其他同类相比还是显得太大了"],
+  "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
+  "codex.form.bat2.instincts": [" "]
 }
