--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -63,7 +63,7 @@
   "codex.form.bat0.title": ["Overall, if you manage to hide the anomalies on your body, others will think you are a bit of a strange human"],
   "codex.form.bat0.appearance": ["Your arms extend membranous appendages on the outside, feeling a bit like a bat\nYour coccyx also protrudes outward to form a small tail\nBut other than that, they seem to have little practical function"],
   "codex.form.bat0.pros": ["When in the dark, you feel more agile in your actions"],
-  "codex.form.bat0.cons": ["你无法装备胸甲了：你的新肢体让它们变得不再合身"],
+  "codex.form.bat0.cons": ["You can no longer wear chest armor: your new appendages make them ill-fitting."],
   "codex.form.bat0.instincts": ["Stay in the dark makes you feel",
     {
       "text":"comfortable", "color":"green"
@@ -77,32 +77,61 @@
     {
       "text":"uncomfortable", "color":"red"
     }],
-  "codex.form.bat1.title": ["整体而言，你身上的那些异常之处已经过于明显，无法被隐藏起来，其他人会认为你可能是某些外来种族"],
-  "codex.form.bat1.appearance": ["你的耳朵现在位于头顶，它们变得又大又尖，朝向前方\n你的手臂外侧延伸出的膜翼进一步生长，在跳起时你发现你会不自觉地扇动它们\n你的手指现在的结构有点像爪子，让你无法进行精细的操作，不过你依然能够正常抓取物品\n你的脚趾向外延伸，变得又细又长\n你的尾部进一步变长了\n你似乎变小了一些\n由于身体重心的改变，你发现在下蹲时你会不自觉蹲坐在地面上"],
-  "codex.form.bat1.pros": ["你现在可以在黑暗中清晰地分辨事物\n你的双臂变得更加有力，让你的近战攻击力得到了提升\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高\n当处于暗处时，你感觉自己的行动更加敏捷"],
-  "codex.form.bat1.cons": ["你现在的手指结构让使用弓弩变成了奢望\n你的膜翼与新的脚趾结构让装备胸甲与鞋变得不再可能\n在阳光下时，你感觉自己变得更加虚弱与迟缓\n你的身体似乎不再适合消化肉食，它们给与的饱食度更少"],
-  "codex.form.bat1.instincts": ["待在暗处的想法让你感觉",
+  "codex.form.bat1.title": ["Overall, the abnormalities on your body are now too obvious to hide. Others might think you belong to an alien race."],
+  "codex.form.bat1.appearance": [
+    "Your ears are now located on top of your head, large and pointed, facing forward.\n",
+    "The membrane-covered appendages on your arms have grown longer. When you jump, you find yourself involuntarily flapping them.\n",
+    "Your fingers have become claw-like, making fine manipulations difficult. However, you can still grasp items normally.\n",
+    "Your toes have elongated and spread outward.\n",
+    "Your tail has grown significantly longer.\n",
+    "You seem to have shrunk in size slightly.\n",
+    "Due to the shift in your center of gravity, you now squat on the ground involuntarily when crouching."
+  ],
+  "codex.form.bat1.pros": [
+    "You can now clearly distinguish objects in the dark.\nYour arms have become stronger, enhancing your melee attack power.\nThough still unable to fly, flapping your membranes allows you to jump higher.\nWhen in shadowed areas, you feel more agile and swift."
+  ],
+  "codex.form.bat1.cons": [
+    "Your finger structure now makes using bows or crossbows nearly impossible.\nThe membranes and new toe structure prevent wearing chest armor or shoes.\nIn sunlight, you feel weaker and slower.\nYour body no longer efficiently digests meat; they provide less satiety."
+  ],
+  "codex.form.bat1.instincts": [
+    "The thought of staying in the dark makes you feel",
     {
-      "text":"舒适", "color":"green"
-    },"\n吃一些水果的想法让你感觉",
+      "text": "comfortable", "color": "green"
+    },
+    "\nThe idea of eating some fruit makes you feel",
     {
-      "text":"舒适", "color":"green"
-    },"\n被滴水石块或石笋围绕的想法让你感觉",
+      "text": "comfortable", "color": "green"
+    },
+    "\nThe thought of being surrounded by dripstone or stalagmites makes you feel",
     {
-      "text":"舒适", "color":"green"
-    },"\n\n待在阳光下的想法让你感觉",
+      "text": "comfortable", "color": "green"
+    },
+    "\n\nThe idea of staying in sunlight makes you feel",
     {
-      "text":"不舒服", "color":"red"
-    },"\n吃肉食的想法让你感觉",
+      "text": "uncomfortable", "color": "red"
+    },
+    "\nThe thought of eating meat makes you feel",
     {
-      "text":"不舒服", "color":"red"
-    },"\n睡觉而浪费美好的夜晚的想法让你感觉",
+      "text": "uncomfortable", "color": "red"
+    },
+    "\nThe idea of sleeping and wasting a beautiful night makes you feel",
     {
-      "text":"不舒服", "color":"red"
-    }],
-  "codex.form.bat2.title": ["整体而言，其他人会认为你完全是一只大的奇怪的蝙蝠"],
-  "codex.form.bat2.appearance": ["你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用工具和武器。不过有了这样一对坚硬而锐利的爪子，谁还想要笨重的工具和武器呢？\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n蹲坐在地面上是对你而言最自然的姿态\n在阴冷的洞窟中，你身体上覆盖的毛发可以有效维持温暖"],
-  "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。自然，它们也可以当做鞘翅使用\n你的体型已经足够小，让你可以挤入一格的空间中。不过和你的其他同类相比还是显得太大了"],
-  "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
-  "codex.form.bat2.instincts": [" "]
+      "text": "uncomfortable", "color": "red"
+    }
+  ],
+  "codex.form.bat2.title": [
+    "Overall, others would see you as a large, strange bat."
+  ],
+  "codex.form.bat2.appearance": [
+    "Your ears now dominate your head, allowing detection of the faintest sounds.\nYour face has developed into a short muzzle with sharp small teeth visible.\nYour arms have become part of the membrane. While still too heavy for flight, they suffice for controlled descents and dives.\nYour forelimbs are no longer suited for tool or weapon use; their strength is in their hardness and sharpness.\nNew claws, digitigrade legs, and a balancing tail make you well-suited for diving and gliding. You can still run with effort.\nSquatting on the ground is your most natural posture.\nIn cold caves, your fur helps maintain warmth."
+  ],
+  "codex.form.bat2.pros": [
+    "You can distinguish objects in darkness. In shadowed areas, you feel more agile and swift.\nYour forelimbs are hard and strong, allowing significant unarmed damage. They also enable fast blockbreaking and harvesting of ores normally.\nThough still unable to fly, flapping membranes allows higher jumps and controlled descents from any height; they can function as elytra.\nYou are now small enough to fit through one-block spaces; though larger than other similar creatures."
+  ],
+  "codex.form.bat2.cons": [
+    "Your forelimbs cannot grip heavy tools or weapons; using them on hard blocks or attacking causes them to slip off.\nUsing using bows or crossbows is impossible with your current claw structure.\nThe membrane and digitigrade legs prevent wearing chestplate, leggings, or boots. They also slightly slow ground movement.\nSunlight weakens and slows you considerably.\nYou can no longer eat meat; your body cannot digest it."
+  ],
+  "codex.form.bat2.instincts": [
+    " "
+  ]
 }
