--- a/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/en_us.json
@@ -3,6 +3,7 @@
   "screen.shape-shifter-curse.start_book.start_button_text": ["TestButton"],
   "info.shape-shifter-curse.before_cursed_moon": ["You feel that the magic in your body is surging. The next night, the cursed moon will rise..."],
   "info.shape-shifter-curse.on_cursed_moon": ["The magic in your body has begun to surge. The cursed moon has risen"],
+  "info.shape-shifter-curse.on_cursed_moon_before_enable": ["Tonight's moon looks a bit strange, with some blue flowers you've never seen before appearing in the moonlight..."],
   "entity.shape-shifter-curse.t_bat": ["Bat?"],
   "item.shape-shifter-curse.custom_bat_spawn_egg": ["Bat? Spawn Egg"],
   "effect.shape-shifter-curse.to_bat_0_effect": [
