--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -76,7 +76,7 @@
     }],
   "codex.form.bat1.title": ["整体而言，你身上的那些异常之处已经过于明显，无法被隐藏起来，其他人会认为你可能是某些外来种族"],
   "codex.form.bat1.appearance": ["你的耳朵现在位于头顶，它们变得又大又尖，朝向前方\n你的手臂外侧延伸出的膜翼进一步生长，在跳起时你发现你会不自觉地扇动它们\n你的手指现在的结构有点像爪子，让你无法进行精细的操作，不过你依然能够正常抓取物品\n你的脚趾向外延伸，变得又细又长\n你的尾部进一步变长了\n你似乎变小了一些\n由于身体重心的改变，你发现在下蹲时你会不自觉蹲坐在地面上"],
-  "codex.form.bat1.pros": ["你现在可以在黑暗中清晰地分辨事物\n你的双臂变得更加有力，让你的近战攻击力得到了提升\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高\n当处于暗处时，你感觉自己的行动更加敏捷"],
+  "codex.form.bat1.pros": ["你现在可以在黑暗中清晰地分辨事物\n你的双臂变得更加有力，让你的近战攻击力得到了提升\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n当处于暗处时，你感觉自己的行动更加敏捷"],
   "codex.form.bat1.cons": ["你现在的手指结构让使用弓弩变成了奢望\n你的膜翼与新的脚趾结构让装备胸甲与鞋变得不再可能\n在阳光下时，你感觉自己变得更加虚弱与迟缓\n你的身体似乎不再适合消化肉食，它们给与的饱食度更少"],
   "codex.form.bat1.instincts": ["待在暗处的想法让你感觉",
     {
@@ -98,8 +98,8 @@
       "text":"不舒服", "color":"red"
     }],
   "codex.form.bat2.title": ["整体而言，其他人会认为你完全是一只大的奇怪的蝙蝠"],
-  "codex.form.bat2.appearance": ["你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用工具和武器。不过有了这样一对坚硬而锐利的爪子，谁还想要笨重的工具和武器呢？\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n蹲坐在地面上是对你而言最自然的姿态\n在阴冷的洞窟中，你身体上覆盖的毛发可以有效维持温暖"],
-  "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。自然，它们也可以当做鞘翅使用\n你的体型已经足够小，让你可以挤入一格的空间中。不过和你的其他同类相比还是显得太大了"],
+  "codex.form.bat2.appearance": ["你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用工具和武器。不过有了这样一对坚硬而锐利的爪子，谁还想要笨重的工具和武器呢？\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n蹲坐在地面上是对你而言最自然的姿态\n在阴冷的洞窟中，你身体上覆盖的绒毛可以有效维持温暖"],
+  "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。自然，它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n你的体型已经足够小，让你可以挤入一格的空间中。不过和你的其他同类相比还是显得太大了"],
   "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
   "codex.form.bat2.instincts": [" "]
 }
