--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -4,6 +4,8 @@
   "info.shape-shifter-curse.before_cursed_moon": ["你感觉到体内的魔法正在涌动，下一个夜晚，诅咒之月将会升起..."],
   "info.shape-shifter-curse.on_cursed_moon": ["你体内的魔法开始激荡，诅咒之月升起了"],
   "info.shape-shifter-curse.on_cursed_moon_before_enable": ["今夜的月亮看起来有些奇怪，有一些你之前未曾见过的蓝色花朵在月光下显现了出来..."],
+  "info.shape-shifter-curse.end_cursed_moon": ["诅咒之月的影响消退了。你体内的魔法趋于平静，让你回复到了诅咒之月升起前的形态"],
+  "info.shape-shifter-curse.end_cursed_moon_by_cure": ["诅咒之月的影响消退了。由于黄金的魔力，你当前的形态得以稳定下来"],
   "entity.shape-shifter-curse.t_bat": ["蝙蝠？"],
   "item.shape-shifter-curse.custom_bat_spawn_egg": ["蝙蝠？刷怪蛋"],
   "effect.shape-shifter-curse.to_bat_0_effect": [
