自定义成就系统的图标与内容 本能系统的基本逻辑跑通

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -1,6 +1,36 @@
 {
   "advancements.shape-shifter-curse.on_enable_mod.title": ["未知的篇章"],
   "advancements.shape-shifter-curse.on_enable_mod.description": ["发生了什么？"],
+  "advancements.shape-shifter-curse.on_open_book_of_shape_shifter.title": ["阅读时间"],
+  "advancements.shape-shifter-curse.on_open_book_of_shape_shifter.description": ["打开幻形者之书"],
+  "advancements.shape-shifter-curse.on_end_cursed_moon.title": ["有点眼熟的桥段"],
+  "advancements.shape-shifter-curse.on_end_cursed_moon.description": ["所以它不是永久的。很高兴知道那个"],
+  "advancements.shape-shifter-curse.on_end_cursed_moon_cured.title": ["魔力调和"],
+  "advancements.shape-shifter-curse.on_end_cursed_moon_cured.description": ["我的理论是..黄金的魔力具有强大的稳定性"],
+  "advancements.shape-shifter-curse.on_end_cursed_moon_cured_form_2.title": ["另一种方法"],
+  "advancements.shape-shifter-curse.on_end_cursed_moon_cured_form_2.description": ["借用诅咒之月的魔力恢复原本的形态"],
+  "advancements.shape-shifter-curse.on_get_transform_effect.title": ["那个生物不太一样！"],
+  "advancements.shape-shifter-curse.on_get_transform_effect.description": ["尝试靠近散发着咒文的生物，并获取它们所施加的效果"],
+  "advancements.shape-shifter-curse.on_sleep_when_have_transform_effect.title": ["昏昏欲睡？"],
+  "advancements.shape-shifter-curse.on_sleep_when_have_transform_effect.description": ["在咒文效果生效的过程中去睡一觉。又能出什么问题呢？"],
+  "advancements.shape-shifter-curse.on_transform_0.title": ["噢…不妙"],
+  "advancements.shape-shifter-curse.on_transform_0.description": ["所以，这就是你体内的魔法会产生的作用.."],
+  "advancements.shape-shifter-curse.on_transform_1.title": ["只是开始"],
+  "advancements.shape-shifter-curse.on_transform_1.description": ["它不会在这一阶段停下"],
+  "advancements.shape-shifter-curse.on_transform_2.title": ["恭喜！这是永久性的"],
+  "advancements.shape-shifter-curse.on_transform_2.description": ["你目前的形态被改变的如此彻底，已经无法逆转了…是吗？"],
+  "advancements.shape-shifter-curse.on_transform_by_catalyst.title": ["来都来了"],
+  "advancements.shape-shifter-curse.on_transform_by_catalyst.description": ["催化剂”…那是做什么的？"],
+  "advancements.shape-shifter-curse.on_transform_by_cure.title": ["解药"],
+  "advancements.shape-shifter-curse.on_transform_by_cure.description": ["另一种截然不同的魔力"],
+  "advancements.shape-shifter-curse.on_transform_by_cure_final.title": ["那绝对值得"],
+  "advancements.shape-shifter-curse.on_transform_by_cure_final.description": ["黄金的魔力——加强版"],
+  "advancements.shape-shifter-curse.on_transform_effect_fade.title": ["这次不行"],
+  "advancements.shape-shifter-curse.on_transform_effect_fade.description": ["嗯…我感觉我还是喜欢我现在的样子"],
+  "advancements.shape-shifter-curse.on_trigger_cursed_moon.title": ["在紫红色的月光下"],
+  "advancements.shape-shifter-curse.on_trigger_cursed_moon.description": ["当不同颜色的月亮升起时，你感觉体内的魔法与之发生了共鸣.."],
+  "advancements.shape-shifter-curse.on_trigger_cursed_moon_form_2.title": ["两面性"],
+  "advancements.shape-shifter-curse.on_trigger_cursed_moon_form_2.description": ["你恢复了之前的形态..至少在月之魔力消退之前。也许你应该抓住这次机会"],
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["奇怪的书"],
   "item.shape-shifter-curse.book_of_shape_shifter": ["幻形者之书"],
   "item.shape-shifter-curse.book_of_shape_shifter.tooltip": ["'本书的奥秘只会向幻形者展现'"],
