--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -17,10 +17,10 @@
   "advancements.shape-shifter-curse.on_transform_0.description": ["所以，这就是你体内的魔法会产生的作用.."],
   "advancements.shape-shifter-curse.on_transform_1.title": ["只是开始"],
   "advancements.shape-shifter-curse.on_transform_1.description": ["它不会在这一阶段停下"],
-  "advancements.shape-shifter-curse.on_transform_2.title": ["恭喜！这是永久性的"],
+  "advancements.shape-shifter-curse.on_transform_2.title": ["概不退货"],
   "advancements.shape-shifter-curse.on_transform_2.description": ["你目前的形态被改变的如此彻底，已经无法逆转了…是吗？"],
-  "advancements.shape-shifter-curse.on_transform_by_catalyst.title": ["来都来了"],
-  "advancements.shape-shifter-curse.on_transform_by_catalyst.description": ["催化剂”…那是做什么的？"],
+  "advancements.shape-shifter-curse.on_transform_by_catalyst.title": ["活性化"],
+  "advancements.shape-shifter-curse.on_transform_by_catalyst.description": ["在咒文效果生效时使用催化剂"],
   "advancements.shape-shifter-curse.on_transform_by_cure.title": ["解药"],
   "advancements.shape-shifter-curse.on_transform_by_cure.description": ["另一种截然不同的魔力"],
   "advancements.shape-shifter-curse.on_transform_by_cure_final.title": ["那绝对值得"],
@@ -34,6 +34,14 @@
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["奇怪的书"],
   "item.shape-shifter-curse.book_of_shape_shifter": ["幻形者之书"],
   "item.shape-shifter-curse.book_of_shape_shifter.tooltip": ["'本书的奥秘只会向幻形者展现'"],
+  "item.shape-shifter-curse.untreated_moondust": ["未加工的月之尘"],
+  "item.shape-shifter-curse.untreated_moondust.tooltip": ["在诅咒之月升起时，一些生物掉落的奇怪物质"],
+  "item.shape-shifter-curse.moondust_matrix": ["月尘基质"],
+  "item.shape-shifter-curse.moondust_matrix.tooltip": ["悬浮在蜂蜜中的月尘"],
+  "item.shape-shifter-curse.catalyst": ["催化剂"],
+  "item.shape-shifter-curse.catalyst.tooltip": ["当你接触它时，你体内的魔法似乎有所反应"],
+  "item.shape-shifter-curse.inhibitor": ["抑制剂"],
+  "item.shape-shifter-curse.inhibitor.tooltip": ["当你接触它时，你体内的魔法似乎平静了一些"],
   "screen.shape-shifter-curse.book_of_shape_shifter.start_content_text":
   [
     "当你试图翻开这本书时，你感觉到伴随着一阵微弱的刺痛，从书中溢出的奇特魔法从指尖流进了你的身体，让你如同触电一般将手缩了回去\n",
@@ -55,7 +63,7 @@
   "info.shape-shifter-curse.on_enable_mod_after": ["回过神时，你发现自己...似乎没什么变化？\n也许你应该检查一下书中的内容.."],
   "info.shape-shifter-curse.before_cursed_moon": ["你感觉到体内的魔法正在涌动，下一个夜晚，诅咒之月将会升起..."],
   "info.shape-shifter-curse.on_cursed_moon": ["你体内的魔法开始激荡，诅咒之月升起了"],
-  "info.shape-shifter-curse.on_cursed_moon_before_enable": ["今夜的月亮看起来有些奇怪，有一些你之前未曾见过的蓝色花朵在月光下显现了出来..."],
+  "info.shape-shifter-curse.on_cursed_moon_before_enable": ["今夜的月亮看起来有些奇怪。不知道是不是由于它的影响，怪物们开始动荡不安"],
   "info.shape-shifter-curse.end_cursed_moon": ["诅咒之月的影响消退了。你体内的魔法趋于平静，让你回复到了诅咒之月升起前的形态"],
   "info.shape-shifter-curse.origin_form_sleep_when_attached": ["在睡梦中，你所受到的咒文效果激化了你体内的魔法，让你的身体发生了变化..."],
   "info.shape-shifter-curse.origin_form_time_end_when_attached": ["你所受到的咒文效果逐渐消退，你体内的魔法恢复了平静"],
@@ -73,7 +81,7 @@
   "info.shape-shifter-curse.max_form_used_cure_final": ["生效了！更加强大的黄金魔力成功逆转了你身体的一部分变化"],
   "info.shape-shifter-curse.origin_form_used_catalyst": ["受到催化剂的影响，你体内的魔法有些动荡不安，不过最后依然恢复了平静。似乎它们缺少一个更加明确的倾向...？"],
   "info.shape-shifter-curse.origin_form_used_catalyst_attached": ["你所受到的咒文效果被催化剂所活化，让你的身体发生了变化..."],
-  "info.shape-shifter-curse.transformed_by_catalyst": ["受到催化剂的影响，你体内的魔法将你进一步地改变了..."],
+  "info.shape-shifter-curse.use_catalyst": ["你体内的魔法被催化剂进一步激化了..."],
   "info.shape-shifter-curse.max_form_used_catalyst": ["你当前的形态被改变的如此彻底，即使催化剂也难以产生进一步的效果..\n（别失望，我也许之后就会在mod里面加入你在想的那个事情！）"],
   "entity.shape-shifter-curse.t_bat": ["咒文蝙蝠"],
   "item.shape-shifter-curse.custom_bat_spawn_egg": ["咒文蝙蝠刷怪蛋"],
@@ -101,7 +109,7 @@
   "codex.header.pros": ["能力"],
   "codex.header.cons": ["劣势"],
   "codex.header.instincts": ["本能"],
-  "codex.status.normal": ["当前，你感觉没什么特别的"],
+  "codex.status.normal": ["当前，你感觉没什么特别的\n"],
   "codex.status.infected": ["不知为何，你心中突然涌起莫名的",
     {
       "text": "困意", "color": "#0096FF"
@@ -110,9 +118,9 @@
     {
       "text": "睡一觉", "color": "yellow"
     },
-    "?"],
-  "codex.status.before_moon": ["你感觉到体内的魔法正在涌动，下一个夜晚，诅咒之月将会升起..."],
-  "codex.status.under_moon": ["诅咒之月的影响改变了你的身体...\n随着夜晚的结束，这一影响也会消退。不过...也许你应该善用这次机会?"],
+    "?\n"],
+  "codex.status.before_moon": ["你感觉到体内的魔法正在涌动，下一个夜晚，诅咒之月将会升起...\n"],
+  "codex.status.under_moon": ["诅咒之月的影响改变了你的身体...\n随着夜晚的结束，这一影响也会消退。不过...也许你应该善用这次机会?\n"],
   "codex.desc.appearance_normal": ["你的身体感觉和往常没有太大区别。也许你体内的魔法需要一些契机才会产生效果？"],
   "codex.desc.pros_normal": ["目前，你体内的魔法没有给你带来任何能觉察到的益处"],
   "codex.desc.cons_normal": ["目前，你体内的魔法没有给你带来任何不利的影响"],
@@ -120,11 +128,11 @@
   "codex.desc.appearance_0": ["由于你体内的魔法与其他生物的共鸣，你的身体出现了一些变化。在这一阶段，一个金苹果便足以完全将其逆转…"],
   "codex.desc.pros_0": ["你的新形态给了你一些额外的能力…"],
   "codex.desc.cons_0": ["同时，你的新形态也带来了一些不便之处…"],
-  "codex.desc.instincts_0": ["源自其他生物的本能侵入了你的内心\n如果你执意违抗它们的话，你体内不稳定的魔法很可能会进一步改变你的身体..."],
+  "codex.desc.instincts_0": ["你的脑海中出现了之前没有过的念头.."],
   "codex.desc.appearance_1": ["被激化的魔法进一步改变了你的身体。你觉察到它正在试图达到某种新的稳态，某种..和原来的你完全不同的状态。\n也许在其进入到下一个阶段之前使用金苹果逆转它是个好主意..."],
   "codex.desc.pros_1": ["你的新形态给了你更多额外的能力…"],
   "codex.desc.cons_1": ["同时，你的新形态也带来了一些新的不便之处…"],
-  "codex.desc.instincts_1": ["你心中其他生物本能的影响愈发明显\n如果你执意违抗它们的话，你体内不稳定的魔法很可能会进一步改变你的身体..."],
+  "codex.desc.instincts_1": ["你的脑海中其他生物本能的影响愈发明显..也许你应该试着抵御它们"],
   "codex.desc.appearance_2": ["你体内的魔法几乎彻底改变了你。它进入了新的稳定状态，即使是金苹果也无济于补了…\n除非有某些“更加强大”的影响可以让它再次流动…"],
   "codex.desc.pros_2": ["你的形态拥有这些力量"],
   "codex.desc.cons_2": ["同时，你的形态也有一些不便的地方…"],
@@ -134,41 +142,29 @@
   "codex.form.original.pros": [" "],
   "codex.form.original.cons": [" "],
   "codex.form.original.instincts": [" "],
-  "codex.form.bat0.title": ["整体而言，如果设法隐藏掉你身上的那些异常之处的话，其他人会认为你是一个有点奇怪的人类"],
+  "codex.form.bat0.title": ["\n整体而言，如果设法隐藏掉你身上的那些异常之处的话，其他人会认为你是一个有点奇怪的人类"],
   "codex.form.bat0.appearance": ["你的手臂外侧延伸出了附有皮膜的附肢，感觉有点像蝙蝠\n你的尾骨也向外突出形成一条小小的尾部\n不过除此以外，它们似乎没有太多实际功能"],
   "codex.form.bat0.pros": ["当处于暗处时，你感觉自己的行动更加敏捷"],
   "codex.form.bat0.cons": ["你无法装备胸甲了：你的新附肢让它们变得不再合身"],
-  "codex.form.bat0.instincts": ["待在暗处的想法让你感觉",
+  "codex.form.bat0.instincts": ["你开始想要",
     {
-    "text":"舒适", "color":"green"
-    },"\n\n待在阳光下的想法让你感觉",
-    {
-    "text":"不舒服", "color":"red"
+    "text":"待在暗处", "color":"#c67681"
     }],
-  "codex.form.bat1.title": ["整体而言，其他人会认为你可能是某些外来种族"],
+  "codex.form.bat1.title": ["\n整体而言，其他人会认为你可能是某些外来种族"],
   "codex.form.bat1.appearance": ["你的耳朵现在位于头顶，它们变得又大又尖，朝向前方\n你的手臂外侧延伸出的膜翼进一步生长，在跳起时你发现你会不自觉地扇动它们\n你的手指现在的结构有点像爪子，让你无法进行精细的操作，不过你依然能够正常抓取物品\n你的脚趾向外延伸，变得又细又长\n你的尾部进一步变长了\n你似乎变小了一些"],
   "codex.form.bat1.pros": ["你现在可以在黑暗中清晰地分辨事物\n你的双臂变得更加有力，让你的近战攻击力得到了提升\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n当处于暗处时，你感觉自己的行动更加敏捷"],
   "codex.form.bat1.cons": ["你现在的手指结构让使用弓弩变成了奢望\n你的膜翼与新的脚趾结构让装备胸甲与鞋变得不再可能\n在阳光下时，你感觉自己变得更加虚弱与迟缓\n你的身体似乎不再适合消化肉食，它们给与的饱食度更少"],
-  "codex.form.bat1.instincts": ["待在暗处的想法让你感觉",
+  "codex.form.bat1.instincts": ["你想要尽可能",
     {
-      "text":"舒适", "color":"green"
-    },"\n吃一些水果的想法让你感觉",
+      "text":"待在暗处", "color":"#c67681"
+    },
     {
-      "text":"舒适", "color":"green"
-    },"\n被滴水石块或石笋围绕的想法让你感觉",
+      "text":"\n食用更多水果的想法", "color":"#c67681"
+    },"开始吸引你",
     {
-      "text":"舒适", "color":"green"
-    },"\n\n待在阳光下的想法让你感觉",
-    {
-      "text":"不舒服", "color":"red"
-    },"\n吃肉食的想法让你感觉",
-    {
-      "text":"不舒服", "color":"red"
-    },"\n睡觉而浪费美好的夜晚的想法让你感觉",
-    {
-      "text":"不舒服", "color":"red"
-    }],
-  "codex.form.bat2.title": ["整体而言，其他人会认为你完全是一只大的奇怪的蝙蝠"],
+      "text":"\n被滴水石块围绕", "color":"#c67681"
+    },"的想法开始吸引你"],
+  "codex.form.bat2.title": ["\n整体而言，其他人会认为你完全是一只大的奇怪的蝙蝠"],
   "codex.form.bat2.appearance": ["你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用笨重的工具和武器\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n在阴冷的洞窟中，你身体上覆盖的绒毛可以有效维持温暖"],
   "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n你的体型已经足够小，让你可以挤入一格的空间中"],
   "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
