--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -8,7 +8,7 @@
   "advancements.shape-shifter-curse.on_end_cursed_moon_cured.title": ["魔力调和"],
   "advancements.shape-shifter-curse.on_end_cursed_moon_cured.description": ["我的理论是..黄金的魔力具有强大的稳定性"],
   "advancements.shape-shifter-curse.on_end_cursed_moon_cured_form_2.title": ["另一种方法"],
-  "advancements.shape-shifter-curse.on_end_cursed_moon_cured_form_2.description": ["借用诅咒之月的魔力恢复原本的形态"],
+  "advancements.shape-shifter-curse.on_end_cursed_moon_cured_form_2.description": ["成功借用诅咒之月的魔力恢复原本的形态"],
   "advancements.shape-shifter-curse.on_get_transform_effect.title": ["那个生物不太一样！"],
   "advancements.shape-shifter-curse.on_get_transform_effect.description": ["尝试靠近散发着咒文的生物，并获取它们所施加的效果"],
   "advancements.shape-shifter-curse.on_sleep_when_have_transform_effect.title": ["昏昏欲睡？"],
@@ -42,6 +42,8 @@
   "item.shape-shifter-curse.catalyst.tooltip": ["当你接触它时，你体内的魔法似乎有所反应"],
   "item.shape-shifter-curse.inhibitor": ["抑制剂"],
   "item.shape-shifter-curse.inhibitor.tooltip": ["当你接触它时，你体内的魔法似乎平静了一些"],
+  "item.shape-shifter-curse.powerful_inhibitor": ["强效抑制剂"],
+  "item.shape-shifter-curse.powerful_inhibitor.tooltip": ["蕴含着更强力的黄金魔力"],
   "screen.shape-shifter-curse.book_of_shape_shifter.start_content_text":
   [
     "当你试图翻开这本书时，你感觉到伴随着一阵微弱的刺痛，从书中溢出的奇特魔法从指尖流进了你的身体，让你如同触电一般将手缩了回去\n",
@@ -62,7 +64,9 @@
   "info.shape-shifter-curse.on_enable_mod": ["随着书页的开启，书中封印的强大魔法涌入了你的身体！"],
   "info.shape-shifter-curse.on_enable_mod_after": ["回过神时，你发现自己...似乎没什么变化？\n也许你应该检查一下书中的内容.."],
   "info.shape-shifter-curse.before_cursed_moon": ["你感觉到体内的魔法正在涌动，下一个夜晚，诅咒之月将会升起..."],
+  "info.shape-shifter-curse.before_cursed_moon_nether": ["你感觉到体内的魔法正在涌动，一段时间后，诅咒之月将会在某处升起————似乎即使在其它位面，你依然无法远离它的影响"],
   "info.shape-shifter-curse.on_cursed_moon": ["你体内的魔法开始激荡，诅咒之月升起了"],
+  "info.shape-shifter-curse.on_cursed_moon_nether": ["你体内的魔法开始激荡，诅咒之月在某处升起了"],
   "info.shape-shifter-curse.on_cursed_moon_before_enable": ["今夜的月亮看起来有些奇怪。不知道是不是由于它的影响，怪物们开始动荡不安"],
   "info.shape-shifter-curse.end_cursed_moon": ["诅咒之月的影响消退了。你体内的魔法趋于平静，让你回复到了诅咒之月升起前的形态"],
   "info.shape-shifter-curse.origin_form_sleep_when_attached": ["在睡梦中，你所受到的咒文效果激化了你体内的魔法，让你的身体发生了变化..."],
