Alley形态的框架完成，软骨骼添加X向旋转逻辑

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -37,8 +37,10 @@
   "effect.shape-shifter-curse.moondust_potion": ["月之尘的精华在其中翻涌，它需要进一步加工"],
   "item.minecraft.potion.effect.to_bat_0_potion": ["蝙蝠咒文药水"],
   "effect.shape-shifter-curse.to_bat_0_potion": ["吱吱！"],
-  "item.minecraft.potion.effect.to_axolotl_0_potion": ["美西螈咒文药水"],
-  "effect.shape-shifter-curse.to_axolotl_0_potion": ["最好保持湿润"],
+  "item.minecraft.potion.effect.to_axolotl_0_potion": ["悦灵咒文药水"],
+  "effect.shape-shifter-curse.to_axolotl_0_potion": ["紫晶碎片！它会很重要的"],
+  "item.minecraft.potion.effect.to_alley_sp_potion": ["美西螈咒文药水"],
+  "effect.shape-shifter-curse.to_alley_sp_potion": ["最好保持湿润"],
   "item.minecraft.potion.effect.to_ocelot_0_potion": ["豹猫咒文药水"],
   "effect.shape-shifter-curse.to_ocelot_0_potion": ["你会想要储备一点生肉的"],
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["奇怪的书"],
@@ -83,6 +85,7 @@
   "info.shape-shifter-curse.origin_form_time_end_when_attached": ["你所受到的咒文效果逐渐消退，你体内的魔法恢复了平静"],
   "info.shape-shifter-curse.end_cursed_moon_by_cure": ["诅咒之月的影响消退了。由于黄金的魔力，你当前的形态得以稳定下来"],
   "info.shape-shifter-curse.origin_form_used_cure": ["黄金的魔力让你体内的魔法稍微平息了一瞬，但很快又恢复如常。要确实驱散它的话，你可能需要寻找其他方式..."],
+  "info.shape-shifter-curse.transformed_by_cure_0": ["黄金的魔力成功逆转了你的变化！你体内的魔法稳定了下来"],
   "info.shape-shifter-curse.transformed_by_cure": ["黄金的魔力成功逆转了你的变化！虽然只有一部分..."],
   "info.shape-shifter-curse.max_form_used_cure": ["黄金的魔力对你目前的形态没有任何效果...似乎只有某种更",
     {
@@ -97,6 +100,7 @@
   "info.shape-shifter-curse.origin_form_used_catalyst_attached": ["你所受到的咒文效果被催化剂所活化，让你的身体发生了变化..."],
   "info.shape-shifter-curse.use_catalyst": ["你体内的魔法被催化剂进一步激化了..."],
   "info.shape-shifter-curse.max_form_used_catalyst": ["你当前的形态被改变的如此彻底，即使催化剂也难以产生进一步的效果..\n（别失望，我也许之后就会在mod里面加入你在想的那个事情！）"],
+  "info.shape-shifter-curse.sp_form_used_catalyst": ["你目前的形态中似乎流淌着某种特殊的魔力，催化剂无法对它产生进一步的影响..."],
   "entity.shape-shifter-curse.t_bat": ["咒文蝙蝠"],
   "item.shape-shifter-curse.custom_bat_spawn_egg": ["咒文蝙蝠刷怪蛋"],
   "entity.shape-shifter-curse.t_axolotl": ["咒文美西螈"],
