--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -37,10 +37,10 @@
   "effect.shape-shifter-curse.moondust_potion": ["月之尘的精华在其中翻涌，它需要进一步加工"],
   "item.minecraft.potion.effect.to_bat_0_potion": ["蝙蝠咒文药水"],
   "effect.shape-shifter-curse.to_bat_0_potion": ["吱吱！"],
-  "item.minecraft.potion.effect.to_axolotl_0_potion": ["悦灵咒文药水"],
-  "effect.shape-shifter-curse.to_axolotl_0_potion": ["紫晶碎片！它会很重要的"],
-  "item.minecraft.potion.effect.to_alley_sp_potion": ["美西螈咒文药水"],
-  "effect.shape-shifter-curse.to_alley_sp_potion": ["最好保持湿润"],
+  "item.minecraft.potion.effect.to_allay_sp_potion": ["悦灵咒文药水"],
+  "effect.shape-shifter-curse.to_allay_sp_potion": ["紫晶碎片！它会很重要的"],
+  "item.minecraft.potion.effect.to_axolotl_0_potion": ["美西螈咒文药水"],
+  "effect.shape-shifter-curse.to_axolotl_0_potion": ["最好保持湿润"],
   "item.minecraft.potion.effect.to_ocelot_0_potion": ["豹猫咒文药水"],
   "effect.shape-shifter-curse.to_ocelot_0_potion": ["你会想要储备一点生肉的"],
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["奇怪的书"],
@@ -79,8 +79,10 @@
   "info.shape-shifter-curse.before_cursed_moon_nether": ["你感觉到体内的魔法正在涌动，一段时间后，诅咒之月将会在某处升起————似乎即使在其它位面，你依然无法远离它的影响"],
   "info.shape-shifter-curse.on_cursed_moon": ["你体内的魔法开始激荡，诅咒之月升起了"],
   "info.shape-shifter-curse.on_cursed_moon_nether": ["你体内的魔法开始激荡，诅咒之月在某处升起了"],
+  "info.shape-shifter-curse.on_cursed_moon_special": ["奇怪的是，它似乎没有对你的身体产生可见的影响..也许你当前的形态比较[特殊]？"],
   "info.shape-shifter-curse.on_cursed_moon_before_enable": ["今夜的月亮看起来有些奇怪。不知道是不是由于它的影响，怪物们开始动荡不安"],
   "info.shape-shifter-curse.end_cursed_moon": ["诅咒之月的影响消退了。你体内的魔法趋于平静，让你回复到了诅咒之月升起前的形态"],
+  "info.shape-shifter-curse.end_cursed_moon_special": ["诅咒之月的影响消退了,你体内的魔法趋于平静"],
   "info.shape-shifter-curse.origin_form_sleep_when_attached": ["在睡梦中，你所受到的咒文效果激化了你体内的魔法，让你的身体发生了变化..."],
   "info.shape-shifter-curse.origin_form_time_end_when_attached": ["你所受到的咒文效果逐渐消退，你体内的魔法恢复了平静"],
   "info.shape-shifter-curse.end_cursed_moon_by_cure": ["诅咒之月的影响消退了。由于黄金的魔力，你当前的形态得以稳定下来"],
@@ -127,6 +129,12 @@
       "text": "豹猫", "color": "#0096FF"
     },
     "?"
+  ],
+  "effect.shape-shifter-curse.to_allay_sp_effect": [
+    {
+      "text": "悦灵", "color": "#0096FF"
+    },
+    "咒文...?"
   ],
   "effect.shape-shifter-curse.to_bat_0_effect.description": [
     "你突然感到很",
