描述写完 同时实现六种不同的预定义形态用于玩家的自定义 下一步先写页面介绍吧，之后看一下怎么做视频

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -43,6 +43,19 @@
   "effect.shape-shifter-curse.to_axolotl_0_potion": ["最好保持湿润"],
   "item.minecraft.potion.effect.to_ocelot_0_potion": ["豹猫咒文药水"],
   "effect.shape-shifter-curse.to_ocelot_0_potion": ["你会想要储备一点生肉的"],
+  "item.minecraft.potion.effect.to_alpha_0_potion": ["ALPHA"],
+  "effect.shape-shifter-curse.to_alpha_0_potion": ["empty custom alpha form"],
+  "item.minecraft.potion.effect.to_beta_0_potion": ["BETA"],
+  "effect.shape-shifter-curse.to_beta_0_potion": ["empty custom beta form"],
+  "item.minecraft.potion.effect.to_gamma_0_potion": ["GAMMA"],
+  "effect.shape-shifter-curse.to_gamma_0_potion": ["empty custom gamma form"],
+  "item.minecraft.potion.effect.to_omega_sp_potion": ["OMEGA"],
+  "effect.shape-shifter-curse.to_omega_sp_potion": ["empty custom omega special form"],
+  "item.minecraft.potion.effect.to_psi_sp_potion": ["PSI"],
+  "effect.shape-shifter-curse.to_psi_sp_potion": ["empty custom psi special form"],
+  "item.minecraft.potion.effect.to_chi_sp_potion": ["CHI"],
+  "effect.shape-shifter-curse.to_chi_sp_potion": ["empty custom chi special form"],
+
   "item.shape-shifter-curse.cursed_book_of_shape_shifter": ["奇怪的书"],
   "item.shape-shifter-curse.book_of_shape_shifter": ["幻形者之书"],
   "item.shape-shifter-curse.book_of_shape_shifter.tooltip": ["'本书的奥秘只会向幻形者展现'"],
@@ -136,6 +149,13 @@
     },
     "咒文...?"
   ],
+  "effect.shape-shifter-curse.to_alpha_0_effect": ["ALPHA"],
+  "effect.shape-shifter-curse.to_beta_0_effect": ["BETA"],
+  "effect.shape-shifter-curse.to_gamma_0_effect": ["GAMMA"],
+  "effect.shape-shifter-curse.to_omega_sp_effect": ["OMEGA"],
+  "effect.shape-shifter-curse.to_psi_sp_effect": ["PSI"],
+  "effect.shape-shifter-curse.to_chi_sp_effect": ["CHI"],
+
   "effect.shape-shifter-curse.to_bat_0_effect.description": [
     "你突然感到很",
     {
@@ -272,5 +292,71 @@
   "codex.form.bat2.appearance": ["你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用笨重的工具和武器\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n在阴冷的洞窟中，你身体上覆盖的绒毛可以有效维持温暖"],
   "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n你的体型已经足够小，让你可以挤入一格的空间中"],
   "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
-  "codex.form.bat2.instincts": [" "]
+  "codex.form.bat2.instincts": [" "],
+  "codex.form.allay_sp.title": ["\n你现在的样子相当接近于某种友善的灵体生物，但不清楚是否由于你体内存在的魔法，你的身上出现了一些不太一样的特征"],
+  "codex.form.allay_sp.appearance": ["你的身体现在由某种亮蓝色的半透明薄纱状物质构成。它们非常轻盈，让你能够漂浮在空中\n一对羽状的，类似触角的结构从你的前额长出，质地相当柔韧。它们似乎给了你某种全新的感官，让你可以感觉到周围生物所在的方位\n一双枝状的翅膀从你背后生长出来。借助它们。你可以在高空中漂浮移动。在翅膀的下方，两条飘带状的结构从你的背后延伸出来——你不太确定它们的作用，也许它们可以替代你失去的腿部的某些功能"],
+  "codex.form.allay_sp.pros": ["更加接近于灵体的体质给与了你一些全新的能力——\n你的各种动作现在几乎不会消耗饱食度\n通过长按跳跃键，你可以飞上高空，以及在空中自由悬浮移动。在下落时你也会缓慢飘落\n\n由于漂浮在空中，你自然不会发出脚步声\n紫水晶与你的身体产生了奇特的共鸣：在物品栏中，你可以对着一个紫水晶块“使用”另一个紫水晶块来创造紫水晶碎片\n你可以感应到其他生物的能量并加以利用：你可以感知到一定范围内实体的方位。当对其他生物造成伤害时，你也可以从其身上吸取一定的生命值\n由于增强的感知能力，你可以使用弓箭带来更高的伤害\n你现在非常小，可以轻易进入一格高的空间，投射物也更难命中你"],
+  "codex.form.allay_sp.cons": ["介于灵体与实体之间的体质也为你带来了一些劣势——\n在使用悬浮能力时，你的饱食度会快速消耗\n你的身体无法从食物中获取能量，只有紫水晶碎片可以恢复你的饱食度。你也很难通过饱食度回复失去的生命值\n你的身体更加弱小，使用双手才能挥动工具与武器。你挖掘坚硬材质的速度更慢，造成的近战伤害也大量减少\n由于漂浮在空中，你移动的惯性更大，让你更难停下\n你躯干的下半部分消失了，你不再能装备腿甲与鞋"],
+  "codex.form.allay_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"],
+
+  "codex.form.alpha0.title": [" "],
+  "codex.form.alpha0.appearance": [" "],
+  "codex.form.alpha0.pros": [" "],
+  "codex.form.alpha0.cons": [" "],
+  "codex.form.alpha0.instincts": [" "],
+  "codex.form.alpha1.title": [" "],
+  "codex.form.alpha1.appearance": [" "],
+  "codex.form.alpha1.pros": [" "],
+  "codex.form.alpha1.cons": [" "],
+  "codex.form.alpha1.instincts": [" "],
+  "codex.form.alpha2.title": [" "],
+  "codex.form.alpha2.appearance": [" "],
+  "codex.form.alpha2.pros": [" "],
+  "codex.form.alpha2.cons": [" "],
+  "codex.form.alpha2.instincts": [" "],
+  "codex.form.beta0.title": [" "],
+  "codex.form.beta0.appearance": [" "],
+  "codex.form.beta0.pros": [" "],
+  "codex.form.beta0.cons": [" "],
+  "codex.form.beta0.instincts": [" "],
+  "codex.form.beta1.title": [" "],
+  "codex.form.beta1.appearance": [" "],
+  "codex.form.beta1.pros": [" "],
+  "codex.form.beta1.cons": [" "],
+  "codex.form.beta1.instincts": [" "],
+  "codex.form.beta2.title": [" "],
+  "codex.form.beta2.appearance": [" "],
+  "codex.form.beta2.pros": [" "],
+  "codex.form.beta2.cons": [" "],
+  "codex.form.beta2.instincts": [" "],
+  "codex.form.gamma0.title": [" "],
+  "codex.form.gamma0.appearance": [" "],
+  "codex.form.gamma0.pros": [" "],
+  "codex.form.gamma0.cons": [" "],
+  "codex.form.gamma0.instincts": [" "],
+  "codex.form.gamma1.title": [" "],
+  "codex.form.gamma1.appearance": [" "],
+  "codex.form.gamma1.pros": [" "],
+  "codex.form.gamma1.cons": [" "],
+  "codex.form.gamma1.instincts": [" "],
+  "codex.form.gamma2.title": [" "],
+  "codex.form.gamma2.appearance": [" "],
+  "codex.form.gamma2.pros": [" "],
+  "codex.form.gamma2.cons": [" "],
+  "codex.form.gamma2.instincts": [" "],
+  "codex.form.omega_sp.title": [" "],
+  "codex.form.omega_sp.appearance": [" "],
+  "codex.form.omega_sp.pros": [" "],
+  "codex.form.omega_sp.cons": [" "],
+  "codex.form.omega_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"],
+  "codex.form.psi_sp.title": [" "],
+  "codex.form.psi_sp.appearance": [" "],
+  "codex.form.psi_sp.pros": [" "],
+  "codex.form.psi_sp.cons": [" "],
+  "codex.form.psi_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"],
+  "codex.form.chi_sp.title": [" "],
+  "codex.form.chi_sp.appearance": [" "],
+  "codex.form.chi_sp.pros": [" "],
+  "codex.form.chi_sp.cons": [" "],
+  "codex.form.chi_sp.instincts": ["\n\n\n与其它形态相比，你觉察到你当前的形态似乎有些“特别之处”：它并没有对你的内心造成太多影响，似乎也没有那么稳定。如果你希望的话，应该可以较为容易地将其逆转"]
 }
